@@ -2,7 +2,7 @@
 
 [General Info]
 Version=1
-LastClass=CTrapParamDlg
+LastClass=CNodePropsGeneral
 LastTemplate=CDialog
 NewFileInclude1=#include "stdafx.h"
 NewFileInclude2=#include "nxcon.h"
@@ -17,20 +17,20 @@ Class9=CMapView
 
 ResourceCount=92
 Resource1=IDD_THRESHOLD (English (U.S.))
-Resource2=IDD_CREATE_CONTAINER
+Resource2=IDD_OBJECT_GENERAL
 Resource3=IDM_VIEW_SPECIFIC (English (U.S.))
-Resource4=IDA_MDI_DEFAULT
-Resource5=IDD_EDIT_RULE_ALARM
+Resource4=IDD_DCI_THRESHOLDS
+Resource5=IDD_LOGIN
 Class2=CChildView
 Class5=CAboutDlg
 Class6=CControlPanel
 Class8=CMapFrame
 Class10=CLoginDialog
-Resource6=IDD_CREATE_TG
+Resource6=IDD_NEW_USER
 Class11=CProgressDialog
-Resource7=IDD_LOGIN
+Resource7=IDD_CP_GENERAL
 Class12=CObjectBrowser
-Resource8=IDD_OBJECT_GENERAL
+Resource8=IDD_CREATE_NODE
 Class13=CObjectPropDlg
 Resource9=IDD_CP_GENERAL (English (U.S.))
 Resource10=IDA_OBJECT_BROWSER (English (U.S.))
@@ -46,7 +46,7 @@ Resource17=IDD_SET_PASSWORD (English (U.S.))
 Class16=CDebugFrame
 Resource18=IDD_OBJECT_SECURITY (English (U.S.))
 Resource19=IDD_OBJECT_PROPERTIES (English (U.S.))
-Resource20=IDA_EPP
+Resource20=IDD_MIB_BROWSER
 Class17=CObjectPreview
 Resource21=IDD_DCI_TRANSFORM (English (U.S.))
 Class18=CToolBox
@@ -59,7 +59,7 @@ Class23=CNodePropsGeneral
 Resource23=IDD_LOGIN (English (U.S.))
 Class24=CObjectPropCaps
 Class25=CObjectPropSheet
-Resource24=IDA_EVENT_EDITOR
+Resource24=IDD_SELECT_EVENT
 Class26=CRequestProcessingDlg
 Resource25=IDD_EDIT_EVENT (English (U.S.))
 Resource26=IDD_PROGRESS (English (U.S.))
@@ -69,22 +69,22 @@ Class27=CObjectPropsGeneral
 Resource29=IDA_ALARM_BROWSER (English (U.S.))
 Class28=CObjectPropsSecurity
 Resource30=IDD_CREATE_NODE (English (U.S.))
-Resource31=IDA_NETMAP
+Resource31=IDD_CREATE_TG
 Resource32=IDM_VIEW_SPECIFIC
 Class29=CUserSelectDlg
-Resource33=IDA_TRAP_EDITOR
+Resource33=IDD_EDIT_RULE_SEVERITY
 Class30=CUserEditor
 Resource34=IDD_DCI_PROPERTIES
 Class31=CNewUserDlg
-Resource35=IDD_SELECT_USER
-Resource36=IDD_GROUP_PROPERTIES
+Resource35=IDD_EDIT_RULE_COMMENT
+Resource36=IDD_EDIT_TRAP
 Class32=CUserPropDlg
 Resource37=IDM_CONTEXT (English (U.S.))
-Resource38=IDD_EDIT_RULE_COMMENT
+Resource38=IDA_EVENT_EDITOR
 Class33=CGroupPropDlg
-Resource39=IDA_ACTION_EDITOR
-Resource40=IDA_OBJECT_BROWSER
-Resource41=IDD_OBJECT_PRESENTATION
+Resource39=IDD_OBJECT_PRESENTATION
+Resource40=IDD_THRESHOLD
+Resource41=IDA_TRAP_EDITOR
 Resource42=IDD_SELECT_OBJECT (English (U.S.))
 Class34=CPasswordChangeDlg
 Class35=CNodeSummary
@@ -100,55 +100,55 @@ Class41=CGraphFrame
 Class42=CDCIThresholdsPage
 Resource46=IDA_MDI_DEFAULT (English (U.S.))
 Resource47=IDD_OBJECT_CAPS (English (U.S.))
-Resource48=IDR_MAINFRAME
+Resource48=IDD_ACTION_PROPERTIES
 Class43=CThresholdDlg
 Resource49=IDD_SELECT_USER (English (U.S.))
-Resource50=IDD_EDIT_RULE_SEVERITY
+Resource50=IDD_ABOUTBOX
 Class44=CMIBBrowserDlg
 Class45=CEventPolicyEditor
 Class46=CRuleList
 Class47=CRuleHeader
 Resource51=IDR_MAINFRAME (English (U.S.))
-Resource52=IDD_MIB_BROWSER
+Resource52=IDA_ALARM_BROWSER
 Class48=CObjectSelDlg
-Resource53=IDD_SELECT_EVENT
-Resource54=IDA_ALARM_BROWSER
+Resource53=IDA_ACTION_EDITOR
+Resource54=IDD_SELECT_OBJECT
 Class49=CRuleCommentDlg
-Resource55=IDD_CREATE_TEMPLATE
+Resource55=IDD_USER_PROPERTIES
 Class50=CEventSelDlg
-Resource56=IDD_DCI_TRANSFORM
+Resource56=IDD_SELECT_USER
 Resource57=IDD_REQUEST_PROCESSING (English (U.S.))
-Resource58=IDD_NEW_USER
+Resource58=IDD_CREATE_TEMPLATE
 Resource59=IDD_ABOUTBOX (English (U.S.))
 Resource60=IDD_MIB_BROWSER (English (U.S.))
 Class51=CObjectPropsPresentation
 Resource61=IDD_OBJECT_PRESENTATION (English (U.S.))
-Resource62=IDD_THRESHOLD
+Resource62=IDA_EPP
 Class52=CRuleSeverityDlg
-Resource63=IDD_ABOUTBOX
+Resource63=IDD_EDIT_RULE_ALARM
 Class53=CRuleAlarmDlg
 Class54=CAlarmBrowser
 Resource64=IDD_SELECT_EVENT (English (U.S.))
-Resource65=IDD_OBJECT_CAPS
+Resource65=IDD_SELECT_ACTION
 Resource66=IDD_NEW_ACTION (English (U.S.))
 Resource67=IDD_DCI_COLLECTION (English (U.S.))
 Resource68=IDD_NEW_USER (English (U.S.))
 Class55=CConsolePropsGeneral
 Class56=CActionEditor
-Resource69=IDD_REQUEST_PROCESSING
-Resource70=IDD_SELECT_ACTION
+Resource69=IDD_CREATE_CONTAINER
+Resource70=IDD_REQUEST_PROCESSING
 Class57=CNewActionDlg
-Resource71=IDD_SELECT_OBJECT
+Resource71=IDA_NETMAP
 Class58=CEditActionDlg
-Resource72=IDD_DCI_COLLECTION
+Resource72=IDA_MDI_DEFAULT
 Class59=CActionSelDlg
-Resource73=IDD_OBJECT_NODE_GENERAL
+Resource73=IDD_DCI_COLLECTION
 Resource74=IDD_EDIT_RULE_COMMENT (English (U.S.))
 Resource75=IDD_EDIT_RULE_ALARM (English (U.S.))
-Resource76=IDD_CREATE_NODE
+Resource76=IDD_OBJECT_SECURITY
 Class60=CCreateObjectDlg
 Class61=CCreateContainerDlg
-Resource77=IDD_DATA_QUERY
+Resource77=IDD_GROUP_PROPERTIES
 Class62=CCreateNodeDlg
 Resource78=IDA_EPP (English (U.S.))
 Resource79=IDD_CREATE_CONTAINER (English (U.S.))
@@ -158,20 +158,20 @@ Resource81=IDD_ACTION_PROPERTIES (English (U.S.))
 Class64=CPollNodeDlg
 Resource82=IDD_POLL_NODE (English (U.S.))
 Class65=CNodePoller
-Resource83=IDD_SET_PASSWORD
-Resource84=IDD_OBJECT_SECURITY
+Resource83=IDR_MAINFRAME
+Resource84=IDD_DCI_TRANSFORM
 Class66=CCreateTemplateDlg
 Class67=CCreateTGDlg
-Resource85=IDD_USER_PROPERTIES
-Resource86=IDD_CP_GENERAL
+Resource85=IDD_DATA_QUERY
+Resource86=IDD_EDIT_EVENT
 Class68=CTrapEditor
-Resource87=IDD_DCI_THRESHOLDS
-Resource88=IDD_NEW_ACTION
-Resource89=IDD_EDIT_TRAP
+Resource87=IDA_OBJECT_BROWSER
+Resource88=IDD_OBJECT_NODE_GENERAL
+Resource89=IDD_SET_PASSWORD
 Class69=CDataQueryDlg
-Resource90=IDD_EDIT_EVENT
+Resource90=IDD_NEW_ACTION
 Class70=CTrapEditDlg
-Resource91=IDD_ACTION_PROPERTIES
+Resource91=IDD_OBJECT_CAPS
 Class71=CTrapParamDlg
 Resource92=IDD_EDIT_TRAP_ARG
 
