@@ -724,7 +724,7 @@ CAPTION "General"
 FONT 8, "MS Sans Serif"
 BEGIN
     EDITTEXT        IDC_EDIT_NAME,51,33,107,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "...",IDC_SELECT_IP,265,24,14,14
+    PUSHBUTTON      "...",IDC_SELECT_IP,265,25,14,14
     EDITTEXT        IDC_EDIT_OID,51,51,228,14,ES_AUTOHSCROLL | ES_READONLY
     COMBOBOX        IDC_COMBO_AUTH,14,103,126,120,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
